--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,6 +10,7 @@ $heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
 $monospace-font-family: Consolas, monospace !default;
+$monospace-font-size: 13pt !default;
 //$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
 $h1: 2.1rem !default;
 $h2: 1.5rem !default;
