better syntax highlighting

--- a/_sass/basscss/_syntax-highlighting.scss
+++ b/_sass/basscss/_syntax-highlighting.scss
@@ -1,4 +1,4 @@
-.highlight {
+/* .highlight {
   -webkit-text-size-adjust: none;
 }
 
@@ -116,4 +116,4 @@
 
 .hljs-chunk {
   color: $hljs-chunk;
-}
+} */
