--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -34,3 +34,8 @@
 @import 'measure';
 @import 'pagination';
 @import 'syntax';
+
+@font-face {
+  font-family: "Abyssinica SIL";
+  src: url("../assets/abyssinicasil-r.ttf");
+}
