--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,8 @@ $base-font-size: 16px;
 $bold-font-weight: bold !default;
 //$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 $title-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$font-family:     "Academica Book Pro", Times, Georgia, serif !default;
+//$font-family:     "Academica Book Pro", Times, Georgia, serif !default;
+$font-family:    'Open Sans', sans-serif !default;
 $line-height: 1.5 !default;
 $heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
 //$heading-font-weight: 900 !default;
