--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,14 +6,16 @@ $title-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', seri
 //$font-family:     "Academica Book Pro", Times, Georgia, serif !default;
 $font-family:    'Open Sans', sans-serif !default;
 $line-height: 1.5 !default;
-$heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
+//$heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
+$heading-font-family: 'Droid Sans Regular', 'Helvetica Neue', Helvetica, sans-serif !default;
 //$heading-font-weight: 900 !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
-$monospace-font-family: Consolas, monospace !default;
+$monospace-font-family: Consolas, Inconsolata, monospace !default;
 $monospace-font-size: 13pt !default;
 //$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
-$h1: 2.1rem !default;
+//$h1: 2.1rem !default;
+$h1: 1.8rem !default;
 $h2: 1.5rem !default;
 $h3: 1.25rem !default;
 $h4: 1rem !default;
@@ -21,7 +23,7 @@ $h5: .875rem !default;
 $h6: .75rem !default;
 $h00: 4rem !default;
 $h0: 3rem !default;
-$main-font-size: 0.95rem !default;
+$main-font-size: 1.1rem !default;
 $h00-responsive: 8vw !default;
 $h0-responsive: 6vw !default;
 $h1-responsive: 4vw !default;
