--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -1,8 +1,8 @@
 blockquote {
-  border-left: 5px solid #7a7a7a;
+//  border-left: 5px solid #7a7a7a;
   font-style: italic;
   margin-left: $space-1;
-  padding: $space-1;
+  //padding: $space-1;
 }
 
 blockquote footer {
@@ -12,5 +12,5 @@ blockquote footer {
   font-size: .85rem;
   font-style: normal;
   text-align: left;
-  padding: 0;
+  //padding: 0;
 }
