--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,19 +4,22 @@ $bold-font-weight: bold !default;
 //$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 $title-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 //$font-family:     "Academica Book Pro", Times, Georgia, serif !default;
-$font-family:    'Open Sans', sans-serif !default;
+$font-family:  "PT Serif", Georgia, "Helvetica Neue", Arial, sans-serif;
+//'Open Sans', sans-serif !default;
 $line-height: 1.5 !default;
 //$heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
-$heading-font-family: 'Droid Sans Regular', 'Helvetica Neue', Helvetica, sans-serif !default;
+$heading-font-family: 'Open Sans', sans-serif !default;
+//"PT Serif", Georgia, "Helvetica Neue", Arial, sans-serif;
+//'Droid Sans Regular', 'Helvetica Neue', Helvetica, sans-serif !default;
 //$heading-font-weight: 900 !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
-$monospace-font-family: Consolas, Inconsolata, monospace !default;
+$monospace-font-family: Consolas, Hack, Inconsolata, monospace !default;
 $monospace-font-size: 13pt !default;
 //$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
 //$h1: 2.1rem !default;
-$h1: 1.8rem !default;
-$h2: 1.5rem !default;
+$h1: 2.0rem !default;
+$h2: 1.7rem !default;
 $h3: 1.25rem !default;
 $h4: 1rem !default;
 $h5: .875rem !default;
